<resources>
    <string name="app_name">RealmDB</string>
    <string name="txt_id">1</string>
    <string name="btn_delete_all">Delete All</string>
    <string name="btn_research">Research note</string>
    <string name="hint_search">Type here what you are looking for</string>
    <string name="btn_search">Search</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="btn_edit">Edit</string>
    <string name="cd_image">Choose image</string>
    <string name="btn_save_notes">Save Notes</string>
    <string name="hint_date">Date</string>
    <string name="switch_remember">Remember me</string>
    <string name="hint_time">Time</string>
    <string name="hint_place">Address</string>
    <string name="activateAlert">Activate Alert</string>
    <string name="activeAlarm">activate Alarm</string>
    <string name="showMap">showMap</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_notify_task">com.example.realmdb.action.DO</string>
    <string-array name="days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
</resources>
